Refactor seat pricing multipliers and update related services
- Updated seat pricing multipliers for VIP, Couple, and Standard seats in Seat.java and AuditoriumService.java.
- Enhanced Theater entity with lazy loading and batch size for auditoriums.
- Added optimized queries in ScreeningRepository for fetching today's screenings and all screenings with related data.
- Implemented caching for movies, screenings, and theaters in MovieService and TheaterService.
- Introduced CacheConfig and CacheWarmupRunner for cache management and warmup on application startup.
- Removed deprecated my-bookings-new.html template and adjusted movie-detail.html for better overview handling.
- Improved currency formatting in JavaScript and added a utility class for currency formatting.
- Updated application.properties for performance optimizations and caching configurations.
- Created SeatPricingController for managing seat pricing multipliers via API.